src/git/snapshots/agentdiff__git__differ__tests__agent_run_diff_uses_backups_vs_worktree.snap
---
source: src/git/differ.rs
expression: diff
---
{
  "base": {
    "AgentRun": {
      "session": "sid",
      "run": 0
    }
  },
  "files": [
    {
      "id": 0,
      "path": "src/greet.rs",
      "old_path": null,
      "change": "Added",
      "is_binary": false,
      "is_created": true,
      "language": "rust",
      "hunks": [
        {
          "href": {
            "path": "src/greet.rs",
            "fingerprint": "[fingerprint]"
          },
          "old": {
            "start": 0,
            "count": 0
          },
          "new": {
            "start": 1,
            "count": 1
          },
          "header": "@@ -0,0 +1,1 @@",
          "lines": [
            {
              "kind": "Added",
              "old_no": null,
              "new_no": 1,
              "text": "pub fn greet() {}",
              "intra": []
            }
          ]
        }
      ],
      "stats": [
        1,
        0
      ]
    },
    {
      "id": 1,
      "path": "src/lib.rs",
      "old_path": null,
      "change": "Modified",
      "is_binary": false,
      "is_created": false,
      "language": "rust",
      "hunks": [
        {
          "href": {
            "path": "src/lib.rs",
            "fingerprint": "[fingerprint]"
          },
          "old": {
            "start": 1,
            "count": 3
          },
          "new": {
            "start": 1,
            "count": 3
          },
          "header": "@@ -1,3 +1,3 @@",
          "lines": [
            {
              "kind": "Context",
              "old_no": 1,
              "new_no": 1,
              "text": "fn f(n: usize) {",
              "intra": []
            },
            {
              "kind": "Removed",
              "old_no": 2,
              "new_no": null,
              "text": "    for _ in 0..=n {}",
              "intra": [
                {
                  "start": 13,
                  "end": 18,
                  "changed": true
                }
              ]
            },
            {
              "kind": "Added",
              "old_no": null,
              "new_no": 2,
              "text": "    for _ in 0..n {}",
              "intra": [
                {
                  "start": 13,
                  "end": 17,
                  "changed": true
                }
              ]
            },
            {
              "kind": "Context",
              "old_no": 3,
              "new_no": 3,
              "text": "}",
              "intra": []
            }
          ]
        }
      ],
      "stats": [
        1,
        1
      ]
    }
  ],
  "generated_at": "[ts]"
}
